[package]
name = "otakugifs_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["default-tls"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = "2"
serde_json = "1"
urlencoding = "2"
tokio = "1"
chrono = "0.4.23"